# Bochs

./: CONTAINER2WASM_OPTIMIZATION_ANALYSIS.md  README.md
bochs/: config.h.in
bochs/cpu/: cpu.cc  cpu.h
bochs/memory/: memory-bochs.h  memory.cc  misc_mem.cc
bochs/wasm/: asyncify-onlylist.txt  configure-wasm-optimized.sh  wizer-deep-snapshot.sh
friscy/: .gitignore  ARCHITECTURE.md  CMakeLists.txt  CRAZY_PERF_IDEAS.md  PERFORMANCE_ROADMAP.md  elf_loader.hpp  guest.cpp  harness.sh  main.cpp  network.hpp  setup_native_harness.sh  syscalls.hpp  test_node.js
friscy/host_proxy/: go.mod
friscy/rv2wasm/: README.md
friscy/rv2wasm/src/: cfg.rs  wasm_builder.rs
friscy/rv2wasm/tests/: integration_test.rs
friscy/tests/: .gitignore  run_network_test.sh  test_dynamic.c  test_server.c  test_simple.c
